--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "buildCommand": "next build",
     "build": [
         {
-            "src": "server.js",
+            "src": "*.js",
             "use": "@vercel/node"
         }
     ],
