--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run compile && npm run bundle",
+    "build": "npm run build && npm run bundle",
     "compile": "tsc",
     "bundle": "webpack --mode=production"
   },
